--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/color-mode": "^3.1.8",
-    "@nuxtjs/tailwindcss": "^6.1.3"
+    "@nuxtjs/tailwindcss": "^6.1.3",
+    "daisyui": "^2.38.1"
   }
 }
