--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@nuxtjs/color-mode": "^3.1.8",
+    "@nuxtjs/robots": "^2.5.0",
     "@nuxtjs/tailwindcss": "^6.1.3",
     "daisyui": "^2.38.1"
   }
